--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.1",
   "author": "Joel Detweiler <joeldetweiler@gmail.com>",
   "engines": {
-    "node": "18"
+    "node": "18",
+    "yarn": ">=2"
   },
   "dependencies": {
     "gatsby": "^4.21.1",
